<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bt_yellow">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/cover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="#50000000"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:lines="1"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:lines="1"
                android:text="@string/deskripsi_about"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="#00000000"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/laymore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="More App - Ads"
                android:textColor="#2c3e50"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recmore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="16dp"
                android:onClick="CLOSECOINS"
                app:srcCompat="@drawable/ic_baseline_cancel_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Your Coins : "
                        android:textColor="@color/gnt_ad_green"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtCoins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1000"
                        android:textColor="@color/gnt_ad_green"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/get_coins"
                    android:textAlignment="center"
                    android:textColor="@color/gnt_ad_green" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#e1b12c"
                        app:cardCornerRadius="45dp">

                        <TextView
                            android:id="@+id/txtVideo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Watch Video"
                            android:textColor="@color/gnt_white" />

                        <ImageButton
                            android:id="@+id/imgHover4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_hover" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cdSurvey"
                        android:layout_width="150dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#e1b12c"
                        app:cardCornerRadius="45dp">

                        <TextView
                            android:id="@+id/txtSurvey"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Take Survey"
                            android:textColor="@color/gnt_white" />

                        <ImageButton
                            android:id="@+id/imgHover4x"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_hover" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="2dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="2dp">

                    <RelativeLayout
                        android:id="@+id/layNative"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <RelativeLayout
                    android:id="@+id/mainLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:visibility="visible"></RelativeLayout>


            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recfake"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>